mem2 - implemented capabilities with handlesLiteralTyping returning false - added GraphMem2Fast, GraphMem2Legacy and GraphMem2Roaring to TestGraph - test suite